# exchanges-spreads-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.sh
scripts/: init-local-db.sql
src/spreads/: __init__.py  config.py  db.py  main.py  models.py  utils.py
src/spreads/exchanges/: __init__.py  base.py  binance.py  bingx.py  bitget.py  bybit.py  gate.py  kucoin.py  mexc.py
src/spreads/middleware/: __init__.py  errors.py  request_logging.py
src/spreads/services/: __init__.py  spread.py
tests/: __init__.py
