[project]
name = "futures-spreads-api"
version = "0.1.0"
description = "REST API for USDT perpetual futures spreads across Bybit, Binance, MEXC, and Gate.io"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["futures", "spreads", "arbitrage", "bybit", "binance", "mexc", "gate", "fastapi"]
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "uvicorn[standard]>=0.32.0",
    "uvloop>=0.19.0",
    "asyncpg>=0.29.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.urls]
Homepage = "https://github.com/username/exhanges-spreads-service"
Repository = "https://github.com/username/exhanges-spreads-service"
Documentation = "https://github.com/username/exhanges-spreads-service#readme"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spreads"]
